src/test/deca/context/invalid/provided/testi20.deca
//Resultats :
//Erreur contextuelle
//Ligne 8 : Invalid cast
class A{}
{
    float x;
    A a = new A();
    a = (A)(x);
}